[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdlive"
version = "0.2.0"
description = "Markdown to HTML/PDF converter with live preview server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hisham Khdair", email = "hkhdair@users.noreply.github.com"},
]
keywords = ["markdown", "html", "pdf", "preview", "live-reload"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "markdown>=3.4",
    "weasyprint>=60.0",
]

[project.scripts]
mdlive = "mdlive:main"

[project.urls]
Homepage = "https://github.com/hkhdair/mdlive"
Repository = "https://github.com/hkhdair/mdlive.git"
Issues = "https://github.com/hkhdair/mdlive/issues"

[tool.setuptools]
py-modules = ["mdlive"]
